@@ -1,1 +1,2 @@
 # Typing-Tests
+--module-path "C:\Program Files (x86)\Java\javafx-sdk-17.0.0.1\lib" --add-modules javafx.controls,javafx.fxml
